# IndieStudio

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bomberman.sln  bomberman.vcxproj  bomberman.vcxproj.filters  cmake_install.cmake
Debug/: Game_test.rar  bomberman.ilk
bomberman.dir/Debug/bomberman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.11528.delete.1.tlog  link.16912.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Core.hpp  EventReceiver.hpp  Game.hpp  IPlayer.hpp  Menu.hpp  Player1.hpp  Player2.hpp
src/: Core.cpp  Game.cpp  Menu.cpp  Player1.cpp  Player2.cpp  main.cpp
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
